<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MiningQuiz</string>
    <!--    bottom navigation items-->
    <string name="home">Home</string>
    <string name="new_quiz">New Quiz</string>
    <string name="statistics">Statistics</string>

    <!--    QuizListFragment Tabs-->
    <string name="quiz">Quiz</string>
    <string name="topics">Topics</string>
    <string name="mistakes">Mistakes</string>


    <string name="solve_by_topic">Solve by topic</string>
    <string name="choose_exam">Choose the exam:</string>
    <string name="choose_topic">Choose the topic:</string>
    <string name="postpone">Postpone</string>
    <string name="exit_game">Quit the test</string>
    <string name="please_choose_the_exam">Please choose the Exam:</string>
    <string name="there_are_no_the_right_answers_in_this_questions">There are no the right answers in this questions:</string>
    <string name="complete_btn">Continue</string>
    <string name="continue_btn">Continue</string>
    <string name="repeat_btn">Repeat</string>
    <string name="let_s_start_btn">Let\'s start!</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="hello_word">Hello!</string>

    <!-- Searching questions -->
    <string name="enter_the_question">Enter the question:</string>
    <string name="search_input">search input</string>
    <string name="there_are_no_questions">There are no questions!</string>
    <string name="founded_the_following_questions">Founded the following questions:</string>
    <string name="questions_found">questions found:</string>
    <string name="exam">Exam:</string>
    <string name="topic">Topic:</string>
    <string name="question">Question:</string>
    <string name="right_answer">Right answer:</string>

    <!--  GameFragment formats  -->
    <string name="topic_content">Topic:\n%s</string>
    <string name="question_from_content">Question %d from %d:\n%s</string>
    <string name="question_contains_n_questions">"This exam contains %d questions. You need to answer at least %d questions to pass exam. Good luck!</string>

    <!--  Congrats and Failed Fragments formats  -->
    <string name="congrats_fr_tv_text">Congratulations, you passed the exam with answered %d from %d questions.</string>
    <string name="failed_fr_tv_text">Sorry, but you didn\'t\'t pass the exam. You answered only %d from %d questions.</string>

    <!-- Quit GameFragment alert dialog -->
    <string name="are_you_sure_want_to_quit">Are you sure?</string>
    <string name="are_you_sure_alert_content">Your attempt would not be saved!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Statistics fragment text views -->
    <string name="st_fr_statistics">Statistics:</string>
    <string name="reset_statistics">Reset statistics</string>
    <string name="statistics_exam_string">Exams:\nTotal attempts: %d\nSuccessful: %d\nFailed: %d</string>
    <string name="statistics_topic_string">Topics:\nTotal attempts: %d\nSuccessful: %d\nFailed: %d</string>

    <!-- GameEngine toast -->
    <string name="attempt_succ_added">Attempt successfully added</string>
    <string name="attempt_failed_saved">Attempt would not be saved</string>

    <!--  Statistics Toasts and Alert Dialogs strings  -->
    <string name="are_you_sure_want_delete_stat">Are you sure?</string>
    <string name="stat_deleted_successfuly">Statistics deleted successfully</string>
    <string name="stat_deleted_failed">Statistics is not deleted</string>
    <string name="home_fr_content">Данное приложение помогает подготовиться к экзаменам по вопросам Охраны труда и Промышленной безопасности.\nЕсть два режима игры:\n1) Решение экзамена(10 вопросов)\n2) Решение каждой темы отдельно\nПросто перейдите на вкладку Экзамены и выбеите нужный вам режим\nВ приложении также есть возможность поиска вопроса(см.панель вверху) и просмотра статистики а вкладке Статистика.\nУдачи!</string>
    <string name="home_screen">Home screen</string>
    <string name="success_image">success image</string>
    <string name="failed">Failed</string>
    <string name="start_exam">start exam</string>

</resources>