<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/default_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.mityushovn.miningquiz.screens.main.homefragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/quizListFragment"
        android:name="com.mityushovn.miningquiz.screens.main.quizlistfragment.QuizListFragment"
        android:label="@string/new_quiz" />
    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.mityushovn.miningquiz.screens.main.statisticsfragment.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/statistics_fragment" />

</navigation>