<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.main.homefragment.HomeFragment">

    <ImageView
        android:id="@+id/home_fr_iv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/congrats_failure_image_view_height_size"
        android:contentDescription="@string/home_screen"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_home_fr_image_underground_foreground" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/home_fr_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:text="@string/hello_word"
        android:textAlignment="center"
        android:textSize="@dimen/title_text_size" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_fr_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="10dp"
            android:text="@string/home_fr_content"
            android:textAlignment="gravity"
            android:textSize="@dimen/normal_text_size" />

    </ScrollView>

</LinearLayout>