<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mityushovn.miningquiz.feature_game.internal.presentation.GameEngine" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".quiz.presentation.failedfragment.FailedFragment">

            <ImageView
                android:id="@+id/failed_fr_iv"
                android:layout_width="0dp"
                android:layout_height="@dimen/congrats_failure_image_view_height_size"
                android:contentDescription="@string/failed"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_failed_fr_failure1_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/failed_fr_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/title_text_margin_start"
                android:layout_marginTop="@dimen/title_text_margin_top"
                android:layout_marginEnd="@dimen/title_text_margin_end"
                android:text="@{viewModel.stringForFailedFrTV}"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/failed_fr_iv"
                tools:text="Увы, Вы не сдали экзамен. Ваш результат 3 из 12" />

            <Button
                android:id="@+id/failed_fr_continue_btn"
                style="@style/Widget.MiningQuiz.OtherButtonsStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/title_text_margin_start"
                android:layout_marginTop="@dimen/title_text_margin_top"
                android:layout_marginEnd="@dimen/title_text_margin_end"
                android:text="@string/complete_btn"
                app:layout_constraintEnd_toStartOf="@id/failed_fr_repeat_btn"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/failed_fr_tv" />

            <Button
                android:id="@+id/failed_fr_repeat_btn"
                style="@style/Widget.MiningQuiz.OtherButtonsStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/title_text_margin_start"
                android:layout_marginTop="@dimen/title_text_margin_top"
                android:layout_marginEnd="@dimen/title_text_margin_end"
                android:text="@string/repeat_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@id/failed_fr_continue_btn"
                app:layout_constraintTop_toBottomOf="@id/failed_fr_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>