<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mityushovn.miningquiz.screens.main.searchlistfragment.questionfragment.QuestionViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".screens.main.searchlistfragment.questionfragment.QuestionFragment">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/question_fr_exam_tv"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_spacing"
                android:text="@string/exam"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/question_fr_exam_content_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_spacing"
                android:text="@{viewModel.question.nameExam}"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/question_fr_exam_tv"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="ОТиПБ" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/question_fr_topic_tv"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_spacing"
                android:text="@string/topic"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_fr_exam_content_tv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/question_fr_topic_content_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_spacing"
                android:text="@{viewModel.question.nameTopic}"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/question_fr_topic_tv"
                app:layout_constraintTop_toBottomOf="@id/question_fr_exam_content_tv"
                tools:text="Оказание первой помощи" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/question_fr_content_tv"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_spacing"
                android:text="@string/question"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_fr_topic_content_tv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/question_fr_content_content_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_spacing"
                android:text="@{viewModel.question.content}"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/question_fr_topic_tv"
                app:layout_constraintTop_toBottomOf="@id/question_fr_topic_content_tv"
                tools:text="Сколько вдохов требуется производить при искуственном дыхании?" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/question_fr_right_ans_tv"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_spacing"
                android:text="@string/right_answer"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_fr_content_content_tv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/question_fr_right_ans_content_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_spacing"
                android:text="@{viewModel.question.rightAns}"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/question_fr_topic_tv"
                app:layout_constraintTop_toBottomOf="@id/question_fr_content_content_tv"
                tools:text="12/60" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>