<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mityushovn.miningquiz.activities.quiz.GameEngine" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.quiz.gamefragment.GameFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/game_fr_topic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/title_text_margin_start"
            android:layout_marginTop="@dimen/title_text_margin_top"
            android:layout_marginEnd="@dimen/title_text_margin_end"
            android:text="@{viewModel.stringForGameFrQuestionTopic}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            tools:text="Тема: влияние некоторых музыкальных инструментов на личную жизнь крупного рогатого скота." />

        <ScrollView
            android:id="@+id/game_fr_sv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/game_fr_result_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/game_fr_topic">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/game_fr_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/title_text_margin_start"
                    android:layout_marginTop="@dimen/title_text_margin_top"
                    android:layout_marginEnd="@dimen/title_text_margin_end"
                    android:text="@{viewModel.stringForGameFrQuestionContent}"
                    android:textSize="@dimen/question_text_size"
                    tools:text="Вопрос №1 из 12: какое количество коров находится на рисунке при условии, что одна явно нарушает правила ОТ и ПБ?" />

                <Button
                    android:id="@+id/game_fr_answer_1"
                    style="@style/Widget.MiningQuiz.AnswerButtonsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/question_text_size"
                    tools:text="25 или 26, точно не знаю" />

                <Button
                    android:id="@+id/game_fr_answer_2"
                    style="@style/Widget.MiningQuiz.AnswerButtonsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/question_text_size"
                    tools:text="блалалалалаблаллалалаблалалаблалалалал....30" />

                <Button
                    android:id="@+id/game_fr_answer_3"
                    style="@style/Widget.MiningQuiz.AnswerButtonsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/question_text_size"
                    tools:text="ай донт ноу вот ту сэй" />

                <Button
                    android:id="@+id/game_fr_answer_4"
                    style="@style/Widget.MiningQuiz.AnswerButtonsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/question_text_size"
                    tools:text="прупрупрупумпумпумпум \n asduhyf8osayugdfiiuagw08erfygasiodgf0oqew7r80gfuvbzikflghwe807rgyhsdf" />

            </LinearLayout>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/game_fr_result_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_spacing"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/game_fr_continue_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/game_fr_sv"
            tools:text="Правильно" />


        <Button
            android:id="@+id/game_fr_continue_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_spacing"
            android:text="@string/continue_btn"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/game_fr_exit_game_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/game_fr_result_tv" />


        <Button
            android:id="@+id/game_fr_postpone_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/recycler_view_margin_start"
            android:layout_marginTop="@dimen/recycler_view_margin_top"
            android:layout_marginEnd="@dimen/recycler_view_margin_end"
            android:text="@string/postpone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/game_fr_exit_game_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/game_fr_exit_game_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/recycler_view_margin_start"
            android:layout_marginTop="@dimen/recycler_view_margin_top"
            android:layout_marginEnd="@dimen/recycler_view_margin_end"
            android:text="@string/exit_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/game_fr_postpone_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>